--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,11 @@
       content="width=device-width, initial-scale=1"
     />
     <title>Unsprinkle</title>
-    <style>
-      @font-face {
-        font-family: 'Inter';
-        font-style: normal;
-        font-weight: 300 900;
-        font-display: swap;
-        src: url(/fonts/Inter-variable.woff2) format('woff2');
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
